src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Function_Tags__c</fullName>
        <label>Function Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_External_Grader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is External Grader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Tags__c</fullName>
        <label>Title Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chief</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>